refactor: StoreServiceImpl 혜택 조회를 Redis 캐시 서비스로 전환 (N+1 해소)
[의존성 변경]
- BenefitRepository, TierBenefitRepository 직접 의존 제거
- PartnerBenefitCacheService 주입으로 대체

[findNearby / findNearbyByCategory]
- 기존: benefitRepository.findAllByPartner_PartnerIdIn() +
        tierBenefitRepository.findAllByBenefitIn() 으로 두 번 DB 조회 후
        partnerToBenefitsMap, benefitToTiersMap 두 개의 맵 구성.
- 변경: partnerBenefitCacheService.getBenefits(partnerId) 한 번으로
        BenefitCacheDto(혜택 + 등급혜택 포함) 맵 구성.
        TierBenefitDto 변환도 DTO 내부 getTierBenefits()에서 바로 꺼냄.

[findNearbyByKeyword]
- 기존: 스트림 내부에서 매 혜택(benefit)마다
        tierBenefitRepository.findAllByBenefit_BenefitId() 개별 호출 → N+1 문제.
        partnerId + storeName 조합으로 결과를 로컬 HashMap에 캐싱하는
        임시 방어 코드가 존재.
- 변경: 캐시 서비스로 파트너 단위 일괄 조회. N+1 해소 및 로컬 HashMap 제거.

[findNearbyByPartnerName]
- 기존: 스트림 내부에서 매 매장(store)마다 benefitRepository와
        tierBenefitRepository를 반복 호출 → 매장 수만큼 DB 쿼리 발생(N+1).
- 변경: 스트림 밖에서 캐시 서비스를 통해 파트너 혜택을 한 번만 조회 후
        스트림 내에서 재사용.

[selectBenefits]
- 파라미터 타입 List<Benefit> → List<BenefitCacheDto>로 교체.
  선택 로직(오프라인 우선, 매장명 매칭)은 동일.